gcc/testsuite/rust/rustc/ui/parser/keyword-pub-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py pub'

fn main() {
    let pub = "foo"; // { dg-error "" "" { target *-*-* } }
}

